# term-color-support

./: Cargo.toml  README.md
src/: colors.rs  environment.rs  lib.rs  options.rs
src/colors/: mod.rs
src/environment/: mod.rs
src/options/: mod.rs
